Create custom install step for tflite_runner
Cannot use pip flags in requirements files within setup.py
hence cannot use the custom --index-url

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
 attrs~=21.2.0
 sonopy~=0.1.2
-# Get tflite_runtime direct from Google's repo. It is not available on PyPI.
-tflite_runtime~=2.5.0
---extra-index-url=https://google-coral.github.io/py-repo/
+# tflite_runner is installed via setup.py as it requires a custom index-url
