--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-attrs~=21.2.0
-sonopy~=0.1.2
 numpy
-# tflite_runner is installed via setup.py as it requires a custom index-url
+sonopy~=0.1.0
+tflite_runtime>=2.5.0,<3.0
